se_project_spots

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Spots</title>
   </head>
   <body>
+    Here
     <div class="page">
       <header class="header"></header>
       <main class="content"></main>
